--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -384,6 +384,12 @@
     <Compile Include="Tarjetas\tarjCurso.Designer.cs">
       <DependentUpon>tarjCurso.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tarjetas\tarjCursoAsesorado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tarjetas\tarjCursoAsesorado.Designer.cs">
+      <DependentUpon>tarjCursoAsesorado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tarjetas\tarjMensaje.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -593,6 +599,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarCursosAsesoradosResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarProfesoresNombreResponse1.datasource">
