--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -384,6 +384,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tarjetas\tarjCursoxNivel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tarjetas\tarjCursoxNivel.Designer.cs">
+      <DependentUpon>tarjCursoxNivel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tarjetas\tarjTipoMaterial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tarjetas\tarjTipoMaterial.Designer.cs">
+      <DependentUpon>tarjTipoMaterial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tarjetas\tarjTipoMaterialIndice.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -615,6 +627,9 @@
     <EmbeddedResource Include="Tarjetas\tarjProfesor.resx">
       <DependentUpon>tarjProfesor.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tarjetas\tarjTipoMaterial.resx">
+      <DependentUpon>tarjTipoMaterial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tarjetas\tarjUltimoMensaje.resx">
       <DependentUpon>tarjUltimoMensaje.cs</DependentUpon>
     </EmbeddedResource>
@@ -626,6 +641,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarCursoProfesorResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.listarCursosAsesoradosResponse.datasource">
