--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -8,7 +8,8 @@
             <basicHttpBinding>
                 <binding name="UsuariosWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PublicacionesWSPortBinding" />
+                <binding name="PublicacionesWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647"/>
                 <binding name="NotificacionesWSPortBinding" />
                 <binding name="CursosWSPortBinding" />
             </basicHttpBinding>
@@ -24,7 +25,7 @@
                 binding="basicHttpBinding" bindingConfiguration="PublicacionesWSPortBinding"
                 contract="PublicacionesWS.PublicacionesWS" name="PublicacionesWSPort" />
             <endpoint address="http://localhost:8081/LP2Soft_WebServices/UsuariosWS"
-                binding="basicHttpBinding" bindingConfiguration="UsuariosWSPortBinding"
+                binding="basicHttpBinding" bindingConfiguration="UsuariosWSPortBindi ng"
                 contract="UsuarioWS.UsuariosWS" name="UsuariosWSPort" />
         </client>
     </system.serviceModel>
