pequeñas correcciones del lab8

--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -10,8 +10,10 @@
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="PublicacionesWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="NotificacionesWSPortBinding" />
-                <binding name="CursosWSPortBinding" />
+                <binding name="NotificacionesWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+                <binding name="CursosWSPortBinding" receiveTimeout="00:01:00"
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
             </basicHttpBinding>
         </bindings>
         <client>
